4danimals_08_05_2024/4danimals08052024/k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: 4danimals-service
spec:
  selector:
    app: 4danimals-container
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
